[package]
name = "lingcdn-node"
version = "1.0.7"
edition = "2021"

[features]
legacy_waf = []
xdp = []

[dependencies]
# gRPC & Protobuf
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP & Proxy
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
http-body = "1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
hyper-rustls = { version = "0.26", default-features = false, features = ["http1", "http2", "ring", "webpki-tokio", "webpki-roots", "tls12"] }

# Cache storage
sled = "0.34"
lru = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = "0.4"

# Metrics & Telemetry
prometheus = { version = "0.13", features = ["process"] }

# Hashing & Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
ipnet = "2"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
maxminddb = "0.27"

# Error handling & Logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "registry"] }

# Utilities
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
async-stream = "0.3"
bincode = "1.3"
regex = "1"
url = "2"
hostname = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1"
tempfile = "3"
rcgen = "0.12"
sysinfo = "0.30"

# Captcha image generation
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

# XDP/eBPF (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.12"
aya-log = "0.2"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
